# VulChecker

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
demos/: README.md  VulChecker_installation.sh  example_augmentation_notForVM.sh  model_prediction_demo.sh  model_train_demo.sh  preprocess_demo.sh
docs/: conf.py  index.rst
models/trained_on_aug/CWE121/run5_doblog_auc02/: params.txt  pred-wildaug.csv  stats-wildaug.npz
models/trained_on_aug/CWE122/run10_logdbl_auc02_short/: params.txt  pred-wildreal-testset.csv  stats-wildreal-testset.npz
models/trained_on_aug/CWE122/run4_compscores/: params.txt  pred-wildreal-testset.csv  stats-wildreal-testset.npz
models/trained_on_aug/CWE122/run9/: params.txt  stats-wildreal-testset.npz
models/trained_on_aug/CWE190/run10_logdbl_auc02_short2/: params.txt  pred-wildreal-testset.csv  stats-wildreal-testset.npz
models/trained_on_aug/CWE190/run4_compscores/: params.txt  pred-wildreal-testset.csv  stats-wildreal-testset.npz
models/trained_on_aug/CWE190/run5_doblog_auc02/: 190-pred-wildreal-testset.csv  params.txt  stats-wildaug.npz  stats-wildreal-testset.npz
models/trained_on_aug/CWE190/run9/: params.txt  stats-wildreal-testset.npz
models/trained_on_aug/CWE415/run4_compscores/: pred-wildreal-testset.csv  (+1 more)
src/hector_ml/: _features.c  _features.pxd  _features.pyx  _graphs.c  _graphs.pyx  augmentation.py  cli.py  click_helpers.py  compat.py  compile_for_train.py  cross_validation.py  feature_stats.py  features.py  graphs.py  hyperopt.py  lint.py  model.py  paths.py  predict.py  preprocess.py  sample_data.py  stats.py  train.py  train_test_split.py  types.py  validate_data.py  visualize.py
src/hector_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hector_ml/configure/: __init__.py  base.py  cmake.py  ninja.py
tests/: test_click_helpers.py  test_features.py  test_graphs.py  test_integration.py  test_model.py  test_paths.py  test_predict.py  test_preprocess.py
tests/configure/: test_build.py  test_cmake.py  test_ninja.py
(+107 files in other folders)
