[metadata]
name = hector_ml
version = 0.1.0.dev0
description = HECTOR component that predicts the existence of weird machines
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    attrs >=19.3.0
    click >=7.1.1,<8
    matplotlib >=3.2,<4
    more_itertools >=8.4,<9
    networkit >=8.0,<9
    networkx >=2.4,<3
    numpy >=1.18,<2
    pydot >=1.4,<2
    pytorch-ignite >=0.4.rc,<0.5
    scikit-learn >=0.23,<0.24
    scikit-optimize >=0.8,<0.9
    scipy >=1.4,<2
    structure2vec
    torch >=1.5,<2

[options.packages.find]
where=src

[options.package_data]
# * = *.txt

[options.extras_require]
tests =
    coverage >=5.0.3,<6
    hypothesis >=5.6,<6
    hypothesis_networkx >=0.2.1,<0.3
    pytest >=5.3.5,<6
docs =
    sphinx
    importlib_metadata; python_version < "3.8"
dev =
    pre-commit
    tox

[options.entry_points]
console_scripts =
    hector = hector_ml.cli:main

[tool:pytest]
addopts = --strict-markers
filterwarnings =
    error
    ignore:The objective has been evaluated at this point before\.
    ignore:WARNING. module 'pandas' not found, some functionality will be restricted
    ignore:numpy\.ufunc size changed, may indicate binary incompatibility
    ignore:.*is a deprecated alias for the builtin:DeprecationWarning:sklearn.*
    ignore:.*is a deprecated alias for the builtin:DeprecationWarning:skopt.*
    ignore:.*is a deprecated alias for the builtin:DeprecationWarning:networkx.*

[tool:isort]
profile = black
known_first_party = hector_ml

[flake8]
max-line-length = 88
extend-ignore = E203, W503
max-complexity = 10

[coverage:run]
branch = true
source =
    hector_ml

[coverage:paths]
source =
    src/
    .tox/*/site-packages
